# ProRender

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  notes.txt  winrun.bat
ProRender/: CMakeLists.txt  ImguiRenderer.cpp  ImguiRenderer.h  ProRender.cpp  ProRender.h  Renderer.cpp  Renderer.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanGraphicsPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWindow.cpp  VulkanWindow.h  header_libs.cpp  main.cpp  slotmap.h  timer.h  utils.h  vma.h
ProRender/shaders/: camera_bindings.hlsl  frame_uniform_bindings.hlsl  imgui.frag  imgui.hlsl  imgui.vert  instance_data.hlsl  ps1.frag  ps1.hlsl  ps1.vert  ps1_model.vert  sampled_image_bindings.hlsl  structs.hlsl  test.frag  test.frag.spv  test.vert  test.vert.spv  test_pushconstants.hlsl  util.hlsl  vertex_bindings.hlsl
src/: CMakeLists.txt  ImguiRenderer.cpp  ImguiRenderer.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanGraphicsPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWindow.cpp  VulkanWindow.h  gltf_loader.cpp  gltf_loader.h  header_libs.cpp  main.cpp  slotmap.h  utils.cpp  utils.h
src/shaders/: camera_bindings.hlsl  frame_uniform_bindings.hlsl  imgui.frag  postfx.frag  postfx.hlsl  postfx.vert  ps1.frag  ps1.hlsl  ps1.vert  sampled_image_bindings.hlsl  util.hlsl  vertex_bindings.hlsl
